Update README with JavaFX VM options instructions
Added note about JavaFX module path configuration.