@@ -3,7 +3,8 @@
 ## Setup:
 1. Get API key from https://platform.openai.com/docs/overview
 2. export OPENAI_API_KEY="your-key"   # or set in config.properties
-3. Run StoryGeneratorApp.java
+3. You may need to input "--module-path "C:\Program Files\Java\javafx-sdk-25.0.1\lib" --add-modules javafx.controls,javafx.fxml" in the congifgurations VM options, depending on how/where your JavaFX files are.
+4. Run StoryGeneratorApp.java
 
 ## Features
 - [x] Story generation given a user-entered prompt, genre, and story length.
